# os-resources

./: README.md
min-rust-os/: Cargo.toml  README.md  x86_64-min-rust-os.json
min-rust-os/.cargo/: config.toml
min-rust-os/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
min-rust-os/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
min-rust-os/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
min-rust-os/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
