[package]
name = "min-rust-os"
version = "0.1.0"
edition = "2018"

# QEMU supports a special isa-debug-exit device, which provides an easy way to exit QEMU from the guest system after the tests. 
# The bootimage runner appends the test-args to the default QEMU command for all test executables.
# For a normal cargo run, the arguments are ignored. iobase and iosize that specify the I/O port through which
# the device can be reached from the kernel.
[package.metadata.bootimage]
# The isa-debug-exit devices uses port-mapped I/O. The iobase parameter specifies on which port address the device should live
# (0xf4 is a generally unused port on the x86's IO bus) and the iosize specifies the port size (0x04 means four bytes).
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
# bootimage provides a test-success-exit-code configuration key that maps a specified exit code to the exit code 0
test-success-exit-code = 33           # (0x10 << 1) | 1
test-timeout = 300          # (in seconds)

# Abort on panic instead of stack unwinding. This is not necessary to add since it is already included
# in the x86_64-min-rus-os.json target spec
# [profile.dev]
# panic = "abort"
# 
# [profile.release]
# panic = "abort"

# Removing the harness is useful for files that only contain a single test, it's treated like a normal executable
[[test]]
name = "should_panic"
harness = false

# The stack overflow test will also run without a harness as it will test a double fault, which means nothing can continue execution
[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"